--- a/kickstart/package.json
+++ b/kickstart/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "dev": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +13,14 @@
     "fs-extra": "^9.0.1",
     "ganache-cli": "^6.9.1",
     "mocha": "^8.0.1",
+    "next": "^4.1.4",
+    "next-routes": "^1.4.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "solc": "^0.4.25",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.2.11"
   }
 }
